# yt-ai-blog

./: README.rst
backend/: .env.example  Makefile  README.rst  pyproject.toml
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
backend/api/: models.py  serializers.py  services.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/management/: admin.py  models.py  serializers.py  urls.py  views.py
backend/management/migrations/: 0001_initial.py  0002_alter_invitecode_code.py
frontend/: README.rst  package.json  pnpm-lock.yaml  schema.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/auth/: admin-route.jsx  auth-form.jsx  protected-route.jsx
frontend/src/components/layout/: footer.jsx  navbar.jsx  root-layout.jsx
frontend/src/components/ui/: button.jsx  dropdown-menu.jsx
frontend/src/lib/: api.js  theme.js
frontend/src/pages/: admin.jsx  auth.jsx  blog.jsx  dashboard.jsx  landing.jsx  not-found.jsx  settings.jsx  unauthorized.jsx
frontend/src/providers/: app-provider.jsx  auth-provider.jsx  theme-provider.jsx
